refactor(dashboard): extraer utilidades a dashboard/utils, limpiar views, robustecer dni y CSRF

--- a/hidrologicas/templates/hidrologicas/detail.html
+++ b/hidrologicas/templates/hidrologicas/detail.html
@@ -1,4 +1,4 @@
-{% extends 'dashboard/content.html' %}
+{% extends 'dashboard/base.html' %}
 {% load static %}
 {% block title %}Detalle de Hidrológica{% endblock %}
 {% block titlecontent %}Detalle de {{ h.nombre_delhidrologica }}{% endblock %}
