--- a/hidrologicas/templates/hidrologicas/update.html
+++ b/hidrologicas/templates/hidrologicas/update.html
@@ -1,4 +1,4 @@
-{% extends 'dashboard/content.html' %}
+{% extends 'dashboard/base.html' %}
 {% load crispy_forms_tags %}
 {% block title %}Editar Hidrológica{% endblock %}
 {% block titlecontent %}Editar Hidrológica{% endblock %}
