--- a/hidrologicas/templates/hidrologicas/create.html
+++ b/hidrologicas/templates/hidrologicas/create.html
@@ -1,4 +1,4 @@
-{% extends 'dashboard/content.html' %}
+{% extends 'dashboard/base.html' %}
 {% load crispy_forms_tags %}
 {% block title %}Crear Hidrológica{% endblock %}
 {% block titlecontent %}Crear Hidrológica{% endblock %}
